# rdo-dailies-announcer

./: .flake8  .gitignore  .isort.cfg  main.py  pyproject.toml
bot/: __main__.py  setup.py
bot/utils/: data.py
rdo_dailies/: __main__.py  logging.yml  nazar_locations.json  setup.py
rdo_dailies/locales/ru/LC_MESSAGES/: messages.mo  messages.po
rdo_dailies/settings/: __init__.py  setup.py
rdo_dailies/utils/: data.py  datetime.py  io.py  logging.py
