[tool.poetry]
name = "rdo_dailies"
version = "0.1.0"
description = ""
authors = ["Anton"]

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.5.1"
beautifulsoup4 = "^4.9.3"
aiofiles = "^0.6.0"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
